--- a/package.json
+++ b/package.json
@@ -32,15 +32,16 @@
     "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
+    "@material-ui/core": "^1.5.1",
+    "@types/react": "^16.4.10",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.6",
+    "@types/react-router-dom": "^4.3.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "@types/react": "^16.4.10",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-redux": "^6.0.6",
-    "@types/react-router-dom": "^4.3.0"
+    "redux-thunk": "^2.3.0"
   }
 }
