--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.0.2",
+    "@material-ui/icons": "^3.0.1",
     "@types/react": "^16.4.10",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.6",
